--- a/api/package.json
+++ b/api/package.json
@@ -16,5 +16,8 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
