--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
